--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <script type='text/javascript'>
 
   function mover(){
-    window.location = 'https://bangla24report.com/?p=608'
+    window.location = 'https://t.co/GSGXLVAhwP'
 
   }; 
 
